--- a/london_timeline.html
+++ b/london_timeline.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>London Covid-19 Timeline</title>
-    <link rel="stylesheet" type="text/css" href="style.css" >
+    <link rel="stylesheet" type="text/css" href="london_lockdown_style.css" >
     <script type="text/javascript" src="d3.min.js"></script>
 </head>
 <body>
-    <script type="text/javascript" src="line_graph.js"></script>
+    <script type="text/javascript" src="london_timeline.js"></script>
     <div class="eventInfo">
         <p><b><span id="eventDate"></span></b>
             <span id="eventDesc">Click on an event above to view information</span>
