--- a/london_timeline.html
+++ b/london_timeline.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="d3.min.js"></script>
 </head>
 <body>
+    <div id="londonTimeline"></div>
     <script type="text/javascript" src="london_timeline.js"></script>
     <div class="eventInfo">
         <p><b><span id="eventDate"></span></b>
