--- a/london/london_timeline.html
+++ b/london/london_timeline.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>London Covid-19 Timeline</title>
     <link rel="stylesheet" type="text/css" href="london_lockdown_style.css" >
-    <script type="text/javascript" src="d3.min.js"></script>
+    <script type="text/javascript" src="../d3.min.js"></script>
 </head>
 <body>
     <div id="londonTimeline"></div>
