--- a/sydney/sydney_timeline.html
+++ b/sydney/sydney_timeline.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>London Covid-19 Timeline</title>
+    <title>Sydney Covid-19 Timeline</title>
     <link rel="stylesheet" type="text/css" href="sydney_lockdown_style.css" >
     <script type="text/javascript" src="../d3.min.js"></script>
 </head>
